--- a/saucelabs-applitools/results/log.html
+++ b/saucelabs-applitools/results/log.html
@@ -1727,25 +1727,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,23697],[],[[5,0,1,6,[7],[1,314,23382],[[0,8,9,0,10,11,0,0,[1,315,6781],[],[[315,2,12]]],[0,13,14,0,15,16,0,0,[1,7096,2748],[],[]],[0,17,14,0,18,19,0,0,[1,9844,12929],[],[]],[0,20,14,0,21,0,0,0,[1,22773,922],[],[]]]]],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,69218],[],[[4,0,1,0,[],[1,771,68446],[[0,5,6,0,7,8,0,0,[1,772,17702],[],[[772,2,9]]],[0,10,11,0,12,13,0,0,[1,18474,2872],[],[]],[0,14,11,0,15,16,0,0,[1,21346,26074],[],[]],[0,17,6,0,18,19,0,0,[1,47421,1043],[],[[47421,2,20]]],[0,14,11,0,15,21,0,0,[1,48464,18685],[],[]],[0,22,11,0,23,0,0,0,[1,67149,1660],[],[]],[0,24,6,0,25,0,0,0,[1,68810,407],[],[]]]]],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Applitools","*/Users/dmontgomery/Sites/Robot Automation Demos/applitools/tests/applitools.robot","*../tests/applitools.robot","*<p>This is a demo\x3c/p>","*Load Home Page","*<p>Test that as a user I can load the home page and confirm the layout is stable\x3c/p>","*Regression","*Open Browser","*Selenium2Library","*<p>Opens a new browser instance to given URL.\x3c/p>","*${URL}, ${BROWSER}","*Opening browser 'chrome' to base url '<a href=\"http://z.co.nz/\">http://z.co.nz/\x3c/a>'","*Open Eyes Session","*RobotAppEyes","*<p>Starts a session with the Applitools Eyes Website.\x3c/p>","*${URL}, ${APPLITOOLS_APPNAME}, ${APPLITOOLS_TESTNAME}, ${APPLITOOLS_KEY}, width=${PAGE_WIDTH}, height=${PAGE_HEIGHT}, osname=${OS}, browsername=${BROWSER}, matchlevel=${MATCH_LEVEL}","*Check Eyes Window","*<p>Takes a snapshot from the browser using the web driver and matches it with\x3c/p>","*Z Home","*Close Eyes Session","*<p>Closes a session and returns the results of the session.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Appli-Sauce2","*/Users/dmontgomery/Sites/Robot Automation Demos/saucelabs-applitools/tests/appli-sauce2.robot","*../tests/appli-sauce2.robot","*Demo Test On SauceLabs","*Open Browser","*Selenium2Library","*<p>Opens a new browser instance to given URL.\x3c/p>","*${START_URL}, chrome, None, remote_url=${SAUCE_REMOTEURL}, desired_capabilities=${DESIRED_CAPABILITIES}","eNq1z00OgjAQBeCrTNiwgoryU4gab+AZpu1ATWhL2qKR09vojr3bSd733twXsg87gfDuFchDLrV3hnKIDgQGgtXPkJ8RtKfxkukYlzAwtpXSlXbLrrvDmeE1ZZOxTho8GRcJkvtMNMYdlGKa3grfkUIkH4a+USOK+li0jeBFPZIseMVlIbquG6u26U+K35xVZNCqMuAqaUYRUrUZ+IG9FNOr+G36j/197wM642Wx","*Open Eyes Session","*RobotAppEyes","*<p>Starts a session with the Applitools Eyes Website.\x3c/p>","*${START_URL}, ${Applitools-AppName}, ${Applitools-TestName}, ${Applitools-Key}, width=${Width}, height=${Height}, includeEyesLog=False, matchlevel=${MatchLevel}","*Check Eyes Window","*<p>Takes a snapshot from the browser using the web driver and matches it with\x3c/p>","*Main Page New, force_full_page_screenshot=True","*Click Element","*<p>Click element identified by `locator`.\x3c/p>","*${button}","*Clicking element 'css=button'.","*Features Page New, force_full_page_screenshot=True","*Close Eyes Session","*<p>Closes a session and returns the results of the session.\x3c/p>","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:23","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:23","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:00:23","fail":0,"label":"Regression","pass":1}],[{"elapsed":"00:00:24","fail":0,"id":"s1","label":"Applitools","name":"Applitools","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:01:08","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:01:08","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:01:09","fail":0,"id":"s1","label":"Appli-Sauce2","name":"Appli-Sauce2","pass":1}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1494993220527;
+window.output["baseMillis"] = 1495163186484;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 23707;
+window.output["generated"] = 69228;
 </script>
 <script type="text/javascript">
 window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","splitLogBase":"log","title":""};
